<resources>
    <string name="app_name">TechCar</string>

    <string name="preference_autologin">unifei.edu.br.techcar.AUTOLOGIN</string>
    <string name="autologin_status">unifei.edu.br.techcar.AUTOLOGINSTATUS</string>
    <string name="autologin_login">unifei.edu.br.techcar.LOGINNAME</string>

    MYSQL
    <string name="db_name">"Tech Car"</string>
    <string name="Database_onCreate">"
        CREATE TABLE usuarios (login TEXT PRIMARY KEY, nome TEXT, nascimento TEXT, cpf TEXT, senha TEXT, email TEXT, telefone TEXT)\nCREATE TABLE automoveis (modelo TEXT PRIMARY KEY, tipo TEXT, marca TEXT, ano INTEGER, cor TEXT, potencia REAL, consumo REAL, capacidade REAL, hardware INTEGER, login TEXT)\nCREATE TABLE custos (id INTEGER PRIMARY KEY, data TEXT, custo REAL, modelo TEXT, login TEXT)
        "</string>

    <string name="Database_onUpgrade">"
        DROP TABLE IF EXISTS usuarios\nDROP TABLE IF EXISTS automoveis\nDROP TABLE IF EXISTS custos
"</string>

    Titulo
    <string name="title_activity_list_automovel">Lista de automóveis</string>
    <string name="title_activity_info">Informações veículo</string>
    <string name="title_activity_cadastro">Cadastro usuário</string>
    <string name="title_activity_cadastro_automovel">Cadastro de automóvel</string>
    <string name="title_activity_login">Login</string>

    Array
    <string-array name="tipos">
        <item>Caminhão</item>
        <item>Carro</item>
        <item>Moto</item>
        <item>Van</item>
    </string-array>
    <string-array name="marcas">
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Ferrari</item>
        <item>Ford</item>
    </string-array>
    <string-array name="hardwares">
        <item>Ativo</item>
        <item>Inativo</item>
    </string-array>

    Action
    <string name="action_team">Equipe</string>
    <string name="action_editar_usuario">Editar usuário</string>
    <string name="action_remover_usuario">Remover usuário</string>
    <string name="action_logout_usuario">Logout</string>
    <string name="action_editar_automovel">Editar automóvel</string>
    <string name="action_remover_automovel">Remover automóvel</string>
    <string name="action_relatorio_custos">Relatório de custos</string>

    Button
    <string name="bt_limpar">Limpar</string>
    <string name="bt_niveltanque">Nível do tanque</string>
    <string name="bt_consumo">Previsão do consumo</string>
    <string name="bt_gasto">Previsão de gastos</string>
    <string name="bt_add_automovel">Adicionar automóvel</string>
    <string name="bt_entrar">Entrar</string>
    <string name="bt_cadastrar">Cadastrar</string>

    TextView
    <string name="text_titulo_equipe">EQUIPE</string>
    <string name="text_hardware_on">Ativo</string>
    <string name="text_hardware_off">Inativo</string>
    <string name="text_unifei">UNIFEI - Universidade federal de Itajubá 2015</string>
    <string name="title_activity_equipe">Equipe</string>
    <string name="text_titulo_cadastro">CADASTRAR USUÁRIO</string>
    <string name="text_titulo_cadastro_automovel">CADASTRAR AUTOMÓVEL</string>
    <string name="text_titulo_info_veiculo">Informações sobre o veículo</string>
    <string name="text_titulo_list_automovel">Automóveis</string>
    <string name="text_titulo_relatorio">Relatório de custos</string>
    <string name="text_titulo_login">Tech car</string>
    <string name="text_tipo">Tipo:</string>
    <string name="text_marca">Marca:</string>
    <string name="text_modelo">Modelo:</string>
    <string name="text_ano">Ano:</string>
    <string name="text_cor">Cor:</string>
    <string name="text_potencia">Potência:</string>
    <string name="text_consumo">Consumo:</string>
    <string name="text_capacidade">Capacidade:</string>
    <string name="text_harware">Hardware:</string>
    <string name="text_info">Informações</string>
    <string name="text_noautomoveis">Não há autmóvis cadastrados</string>

    EditText
    <string name="txt_nome_hint">Nome</string>
    <string name="txt_login_hint">Login</string>
    <string name="txt_senha_hint">Senha</string>
    <string name="txt_nascimento_hint">Data de nascimento</string>
    <string name="txt_cpf_hint">CPF</string>
    <string name="txt_email_hint">Email</string>
    <string name="txt_telefone_hint">Telefone</string>
    <string name="txt_modelo_hint">Modelo</string>
    <string name="txt_ano_hint">Ano</string>
    <string name="txt_cor_hint">Cor</string>
    <string name="txt_potencia_hint">Potência</string>
    <string name="txt_consumo_hint">Consumo</string>
    <string name="txt_capacidade_hint">Capacidade</string>
    <string name="txt_distancia_hint">Distância percorrida(km)</string>
    <string name="txt_preco_hint">Preço</string>

    Mensagens
    <string name="mensagem_campos_vazios">Campo(s) vazio(s)</string>
    <string name="mensagem_campos_1">Preencga ao menos um campo</string>
    <string name="mensagem_usuario_cadastro">Usuário cadastrado com sucesso</string>
    <string name="mensagem_usuario_existente">Usuário existente</string>
    <string name="mensagem_usuario_invalido">Usuário invalido</string>
    <string name="mensagem_usuario_senha_invalida">Senha incorreta</string>
    <string name="mensagem_usuario_alterar">Usuário alterado com sucesso</string>
    <string name="mensagem_usuario_remover">Usuário removido com sucesso</string>
    <string name="mensagem_usuario_confirmar">Deseja remover sua conta ? Todos os usuários seram removidos e o hardware desconectado</string>
    <string name="mensagem_automovel_cadastro">Automóvel cadastrado com sucesso</string>
    <string name="mensagem_automovel_editar">Automóvel editado com sucesso</string>
    <string name="mensagem_automovel_remover">Automóvel removido com sucesso</string>
    <string name="mensagem_automovel_confirmar">Deseja remover sua automóvel ?</string>
    <string name="mensagem_distancia_vazia">Preencha o campos distância</string>
    <string name="mensagem_logout_confirmar">Deseja realizar logout ?</string>
    <string name="mensagem_custo_vazio">Não há custos registrados</string>

    Mesagens titulo
    <string name="mensagem_titulo_informacoes">Informações</string>
    <string name="mensagem_titulo_resultado">Resultado</string>
    <string name="mensagem_titulo_configuracoes">Configurações</string>
    <string name="mensagem_titulo_logout">Logout</string>

    Mensagens botões
    <string name="mensagem_botao_confirmar">Confirmar</string>
    <string name="mensagem_botao_calcular">Calcular</string>
    <string name="mensagem_botao_cancelar">Cancelar</string>
    <string name="title_activity_relatorio_custos">RelatorioCustosActivity</string>

</resources>
