<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_titulo_cadastro"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_nome_cad"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_nome_hint"
            android:singleLine="true" />

        <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_login_cad"
        android:hint="@string/txt_login_hint"
            android:layout_marginTop="25dp"
            android:singleLine="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/txt_senha_cad"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_senha_hint"
            android:singleLine="true" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txt_nascimento_cad"
        android:layout_marginTop="15dp"
        android:hint="@string/txt_nascimento_hint"
        android:singleLine="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/txt_cpf_cad"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_cpf_hint"
            android:singleLine="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/txt_email_cad"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_email_hint"
            android:singleLine="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tel_cad"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:hint="@string/txt_telefone_hint"
            android:singleLine="true" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_cadastrar"
                android:id="@+id/bt_cadastrar_cad"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_limpar"
                android:id="@+id/bt_limpar_cad"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>


        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
