<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="unifei.edu.br.techcar.InfoActivity">
    <item android:id="@+id/action_editar_automovel" android:title="@string/action_editar_automovel"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_edit" />

    <item android:id="@+id/action_remover_automovel" android:title="@string/action_remover_automovel"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_delete" />

    <item android:id="@+id/action_relatorio_custo" android:title="@string/action_relatorio_custos"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_sort_by_size" />

</menu>
