<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="unifei.edu.br.techcar.ListAutomovelActivity">

    <item android:id="@+id/action_editar_usuario" android:title="@string/action_editar_usuario"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_edit" />

    <item android:id="@+id/action_remover_usuario" android:title="@string/action_remover_usuario"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_delete" />

    <item android:id="@+id/action_logout_usuario" android:title="@string/action_logout_usuario"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_close_clear_cancel" />


</menu>
