<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_titulo_cadastro_automovel"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_tipo_cad_auto"
            android:layout_weight="1"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_marca_cad_auto"
            android:layout_weight="1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_modelo_cad_auto"
            android:layout_gravity="center_vertical"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/txt_modelo_hint"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_ano_cad_auto"
            android:layout_gravity="center_vertical"
            android:inputType="numberSigned"
            android:layout_weight="1"
            android:hint="@string/txt_ano_hint"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_cor_cad_auto"
            android:layout_gravity="center_vertical"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/txt_cor_hint"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_potencia_cad_auto"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:hint="@string/txt_potencia_hint"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_consumo_cad_auto"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:hint="@string/txt_consumo_hint"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_capacidade_cad_auto"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:hint="@string/txt_capacidade_hint"
            android:layout_marginTop="15dp" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_hardware_cad_auto"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_cadastrar"
                android:id="@+id/bt_cadastrar_cad_auto"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_limpar"
                android:id="@+id/bt_limpar_cad_auto"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>


        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
