<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_titulo_list_automovel"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_noautomoveis"
                android:id="@+id/text_mensagem"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"/>

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:id="@+id/list_automovel"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_add_automovel"
                android:id="@+id/bt_addautomovel"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

</LinearLayout>
